@@ -5,6 +5,7 @@ Version 1.5.3 (XX/XX/XXXX)
  * Fixed a problem with iTunes 10.6.3 on Mac OS X 10.6.8 causing the chat window's toolbar to break. (#16046)
  * Fixed an issue that caused logging in to Facebook to fail when login approvals are enabled. (#15705)
  * Icons set for group chat bookmarks will now show up on the tab bar in the chat window. (Andreas Marienborg) (#14484)
+ * Fixed tables not being declared as such via VoiceOver. (Marco Zehe) (#16085)
  * Improved memory use slightly.
 
 Version 1.5.2 (7/21/2012)
